--- a/index.html
+++ b/index.html
@@ -151,10 +151,10 @@
   <div class="max-w-5xl mx-auto p-6">
     <!-- Header -->
     <header class="pretty p-6 md:p-7">
-      <h1 class="text-2xl md:text-3xl font-extrabold">🦖 Noël & Anniversaire de Matteo</h1>
-      <p class="text-white/85">Une petite liste d'idées de cadeaux pour Matteo (15 décembre). 🐾<br>
-      Si jamais vous êtes inspirez niveau shopping il fait du 98 cm ~3ans dans la plupart des magasins.<br>
-      Si vous trouvez une idée dans la liste hésitez pas à cocher la case pour qu'on achète pas plusieurs fois la même chose.</p>
+      <h1 class="text-2xl md:text-3xl font-extrabold">🦖 Noël & anniversaire de Matteo</h1>
+      <p class="text-white/85">Une petite liste d'idées de cadeaux pour Matteo. 🐾<br>
+      Si jamais vous êtes inspirés niveau shopping, il met du 98 cm ~3ans dans la plupart des magasins.<br>
+      Si vous trouvez une idée dans la liste n'hésitez pas à cocher la case. 💫</p>
     </header>
 
     <!-- Filtres -->
@@ -176,7 +176,7 @@
         <thead class="navy">
           <tr>
             <th class="text-left px-4 py-3 w-12">OK</th>
-            <th class="text-left px-4 py-3">Idée</th>
+            <th class="text-left px-4 py-3">Idées</th>
             <th class="text-left px-4 py-3">Prix</th>
             <th class="text-left px-4 py-3 w-10"></th>
           </tr>
